--- a/public/birthday-invite.html
+++ b/public/birthday-invite.html
@@ -1,17 +1,17 @@
-<!-- This is one possible solution -->
-<h1>It's My Birthday!</h1>
-<h2>On the 12th May</h2>
 
-<img src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg"
-  alt="purple birthday cake with candles" />
+<h1>Its  My Birthday !!!
+</h1>
+<h2>on 2nd August</h2>
 
-<h3>What to bring:</h3>
+<img src="//raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg"/>
+<h2>Birthday Menu</Menu></h2>
 <ul>
-  <li>Baloons (I love baloons)</li>
-  <li>Cake (I'm really good at eating)</li>
-  <li>An appetite (There will be lots of food)</li>
-</ul>
-
+    <li>Birthday Cake</li>
+    <li>Masala Kulcha</li>
+    <li>Mutton</li>
+    <li>Fried Chicken</li>
+    
+    <li>Chicken Biryani</li>
 <h3>This is where you need to go:</h3>
 <a
   href="https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656">Google
