movie-ranking.html

--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -1,9 +1,19 @@
-<h1>The Best Movies According to Angela</h1>
-<h2>My top 3 movies of all-time.</h2>
-<hr />
-<h3>Spirited Away</h3>
-<p>This is my favourite anime. I love the beautiful images.</p>
-<h3>Ex Machina</h3>
-<p>Really cool sci-fi movie.</p>
-<h3>Drive</h3>
-<p>Super beautiful film. Really artistic.</p>
+<h1>Top Movie Reccomendation by Bratish Dasgupta</h1>
+<hr/>
+<h2>Genre:- Comedy</h2>
+<p>
+1.Hera Pheri<br/>
+2.Phir Hera Pheri<br/>
+3.Golmaal<br/>
+4.Singh is Billing<br/>
+5.Pati Patni aur Woh<br/>
+<p>
+<h2>Genre:- Action</h2>
+<p>
+    1.Jawaan<br/>
+    2.Pathan<br/>
+    3.Baaghi 3<br/>
+    4.Ra-One<br/>
+    5.Dhoom 3<br/>
+</p>
+<h1>Thank You!</h1>
