--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Bratish Dasgupta's Portfolio</h1>
     <hr>
     <hr>
-    <h2>Porjects Made by me</h2>
+    <h2>Projects Made by me</h2>
     <h3><a href="./public/movie-ranking.html" >Movie Reccomendation Website</a></h3>
     <img src="./assets/images/movie-ranking.png" height="400" width="400"/>
     
